--- a/styles/layout.css
+++ b/styles/layout.css
@@ -1,12 +1,19 @@
 body {
-  width: 350px;
-  background-color: #ccc;
+  width: 180px;
+  /*background-color: #ccc;*/
 }
 ul {
   padding: 0;
+  margin-left: 6px;
 }
 li {
   float: left;
   list-style: none;
   padding: 1em;
+  border-top: 1px dashed #222;
+  border-bottom: 1px dashed #222;
+  border-right: 1px dashed #222;
+}
+li:first-of-type {
+	border-left: 1px dashed #222;
 }
