--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -36,7 +36,7 @@ body {
     z-index: 0;
 }
 
-.navbar-inverse {
+/*.navbar-inverse {
     background: #303F9F;
 }
 
@@ -62,4 +62,4 @@ body {
 
 .navbar-inverse .navbar-nav .open .dropdown-menu > li > a:hover {
     color:#000000;
-}
+}*/
